--- a/templates/category.html
+++ b/templates/category.html
@@ -42,9 +42,9 @@
         }
 {% endblock %}
 
+{% block body %}
 
-
-<div class="bg-gray-50" x-data="{ showFilters: false }">
+<div class="" x-data="{ showFilters: false }">
    
     <div x-show="showFilters" 
          x-cloak
@@ -104,15 +104,7 @@
     <!-- Main Content -->
     <div class="min-h-screen">
         <!-- Header -->
-        <header class="bg-white border-b">
-            <div class="container mx-auto px-4 py-4">
-                <nav class="flex items-center space-x-2 text-sm">
-                    <a href="/" class="text-gray-600 hover:text-[#FF8C00]">Home</a>
-                    <i data-lucide="chevron-right" class="w-4 h-4 text-gray-400"></i>
-                    <span class="text-gray-900">Interior</span>
-                </nav>
-            </div>
-        </header>
+       
 
         <main class="container mx-auto px-4 py-8">
             <div class="flex items-center justify-between mb-6">
